# hou53-bot

./: .editorconfig  .gcloudignore  .gitignore  .gitmessage  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  SOLUTION.md  pnpm-lock.yaml  pyproject.toml
.gcp/: cloudbuild-api.yaml  cloudbuild-web.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: adr.md  bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  deploy-gcp.yml
apps/: README.md
apps/api/: .dockerignore  .env.example  Dockerfile  Dockerfile.gcp  README.md  pyproject.toml
apps/api/src/app/: __init__.py  config.py  main.py
apps/api/src/app/api/: dependencies.py
apps/api/src/app/api/dtos/: __init__.py  prediction.py
apps/api/src/app/api/routers/: __init__.py  health.py  model_info.py  predict.py
apps/api/src/app/domain/: __init__.py  prediction.py
apps/api/src/app/infra/: __init__.py  logging.py  model_loader.py
apps/api/src/app/services/: __init__.py  prediction_service.py
apps/api/tests/: conftest.py  test_health.py  test_model_info.py  test_predict.py  test_predict_e2e.py
apps/web/: .env.example  Dockerfile.gcp  README.md  drizzle.config.ts  next.config.ts  package.json  vitest.config.ts
apps/web/drizzle/: 0000_predictions.sql  0000_superb_supreme_intelligence.sql
apps/web/drizzle/meta/: 0000_snapshot.json  _journal.json
apps/web/scripts/: generate_house_schema_contract.py
apps/web/src/: auth.test.ts  auth.ts  middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/estimate/readiness/: route.test.ts  route.ts
apps/web/src/app/api/parse/: route.test.ts  route.ts
apps/web/src/app/api/predict/: route.test.ts  route.ts
apps/web/src/app/history/: page.tsx
apps/web/src/app/history/[id]/: page.tsx
apps/web/src/app/login/: actions.ts  login-form.tsx  page.tsx
apps/web/src/components/: app-shell.tsx  info-tooltip.tsx
apps/web/src/components/ui/: select.tsx
apps/web/src/features/estimate/: estimate-state.test.ts  estimate-state.ts  estimate-workspace.tsx  field-config.test.ts  field-config.ts  field-editor-panel.tsx  field-renderer.tsx  groups.ts  housing-form-schema.ts  housing-form.tsx  parse-field-application.test.ts  parse-field-application.ts  prediction-signal.test.ts  prediction-signal.ts  readiness-assistant-panel.tsx  result-panel.tsx
apps/web/src/lib/: format.ts
apps/web/src/lib/housing/: feature-copy.test.ts  feature-copy.ts  house-schema.generated.json  schema.test.ts  schema.ts
apps/web/src/lib/nlp/: config.ts  logging.ts  parser.test.ts  parser.ts  prompt.ts  rate-limit.test.ts  rate-limit.ts  types.ts
apps/web/src/lib/readiness/: scoring.test.ts  scoring.ts  types.ts
apps/web/src/server/auth/: credentials.ts
apps/web/src/server/db/: client.ts  schema.ts
apps/web/src/server/gcp/: authenticated-cloud-run-fetch.test.ts  authenticated-cloud-run-fetch.ts
apps/web/src/server/predict/: client.ts  metadata.ts  types.ts
apps/web/src/server/predictions/: repository.test.ts  repository.ts
apps/web/src/server/readiness/: questions.test.ts  questions.ts
data/: README.md
docs/: architecture.md  model-card.md
docs/adr/: 0000-template.md  0001-monorepo-structure.md  0002-git-workflow.md  0003-database-choice.md  0004-data-versioning-dvc.md  0004-small-artifacts-in-git.md  0005-experiment-tracking-mlflow.md  0006-model-selection-xgboost.md  0007-evaluation-metric-rmse-log.md  0008-api-framework-fastapi.md  0009-frontend-stack.md  0010-nlp-parsing-strategy.md  0011-assisted-appraisal-frontend.md  0012-deployment-on-google-cloud-run.md  README.md
docs/diagrams/: architecture.dot  predict-sequence.dot  predictions-er.dot
docs/eda/: README.md  report.md
ml/: README.md  pyproject.toml
ml/configs/: default.yaml
ml/evals/nlp_parser/: README.md  baseline-gpt-5.4-mini.json  examples.jsonl
ml/notebooks/: 01_eda.ipynb  01_eda.py  README.md
ml/scripts/: build_nlp_parser_eval_set.py
ml/src/hou53_ml/: __init__.py  config.py  constants.py
ml/src/hou53_ml/eda/: __init__.py  summary.py
ml/src/hou53_ml/evaluation/: __init__.py  metrics.py  nlp_parser.py  reports.py
ml/src/hou53_ml/explainability/: __init__.py  shap_explainer.py
ml/src/hou53_ml/features/: __init__.py  builders.py  derived.py  imputation.py  ordinal.py  target_encoding.py
ml/src/hou53_ml/io/: __init__.py  loaders.py  schema.py
ml/src/hou53_ml/models/: __init__.py  baseline.py  boosting.py
ml/src/hou53_ml/pipelines/: __init__.py  builders.py
ml/src/hou53_ml/serialization/: __init__.py  artifact.py
ml/src/hou53_ml/training/: __init__.py  splits.py  train.py
ml/tests/: conftest.py  test_artifact.py  test_config.py  test_constants.py  test_derived.py  test_eda_summary.py  test_feature_imputation.py  test_loaders.py  test_metrics.py  test_nlp_parser_eval.py  test_ordinal.py  test_pipeline_ridge.py  test_preprocessor.py  test_schema.py  test_shap_explainer.py  test_splits.py
models/: README.md  hou53-pipeline.joblib  model_metadata.json
